--- a/Entity/Entity.csproj
+++ b/Entity/Entity.csproj
@@ -7,4 +7,11 @@
         <RootNamespace>model</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.8" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\common\common.csproj" />
+    </ItemGroup>
 </Project>
